--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<body>
-		<h1>Good morning guys, i am editinh this</h1>
+		<h1>Good morning guys</h1>
 		<h2>Updated master</h2>
 		<h3>Hello world</h3>
 	</body>
